Thu Jun 24 08:22:13 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/tests/OneFile/Multiple/OFM_Connector.mpc:
        * connectors/dds4ccm/tests/OneFile/Single/OneFile_Connector.mpc:
          Further cleanup to get this working on windows

        * MPC/config/dds4ccm_ddsonly.mpb:
          Removed this file.

Thu Jun 24 08:03:24 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/tests/OneFile/Multiple/OFM_Connector.mpc:
        * connectors/dds4ccm/tests/OneFile/Single/OneFile_Connector.mpc:
          Improvements to these files

Thu Jun 24 07:39:45 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/dds/DDSDataReaderListener_T.cpp:
          Warnings.

        * connectors/dds4ccm/tests/DDSWriterEntity/Sender/Writer_Sender_exec.cpp:
        * connectors/dds4ccm/tests/SetConnectorAttributes/Component/SetConnectorAttribute_Component_exec.h:
        * connectors/dds4ccm/tests/SetConnectorAttributes/Component/SetConnectorAttribute_Component_exec.cpp:
        * connectors/dds4ccm/tests/SharedDomainParticipant/SameDatatype/Component/Component_exec.cpp:
          Resolved compiler error related to templated DDS4CCM core.

Thu Jun 24 07:34:01 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/examples/Hello/Base/Hello_Base.mpc:
        * connectors/dds4ccm/examples/Large_Deployment/Common/Common.mpc:
        * connectors/dds4ccm/examples/Quoter/Base/Quoter_Base.mpc:
        * connectors/dds4ccm/examples/Shapes/Base/Shapes_Base.mpc:
        * connectors/dds4ccm/performance-tests/DDSLatency/Base/Latency_Base.mpc:
        * connectors/dds4ccm/performance-tests/DDSLatency/DDS_Receiver/DDS_Receiver.mpc:
        * connectors/dds4ccm/performance-tests/DDSLatency/DDS_Sender/DDS_Sender.mpc:
        * connectors/dds4ccm/performance-tests/DDSThroughput/Base/Throughput_Base.mpc: